# spielcrypto_worker

./: .gitignore  Cargo.toml  LICENSE-PARITY.md  LICENSE-PATRON.md  README.md
.github/: FUNDING.yml
src/: db.rs  main.rs  utils.rs
src/kraken/: dtos.rs  helpers.rs  mod.rs  notify.rs  operations.rs
src/services/: mod.rs  notify.rs
