[package]
name = "dancespiele_worker"
version = "0.1.0"
authors = ["spieljs <spieljs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"

[dependencies]
coinnect={git = "https://github.com/spielrs/coinnect.git", branch = "tradin_agreement"}
cronjob="0.3"
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
chrono = {version="0.4", features= ["serde", "rustc-serialize"]}
sled="0.34"
dotenv="0.15"
curl="0.4"
jsonwebtoken = "7.2"
celery = "0.3"
agnostik = "0.1.5"